--- a/style.css
+++ b/style.css
@@ -1,108 +1,106 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
-*{
-    margin: 0;
-    padding: 0;
+@import url("https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap");
+* {
+  margin: 0;
+  padding: 0;
 }
 
-.container{
-    background: url(bg.jpg);
-    height: 100vh;
-    background-size: 100% 100%;
+.container {
+  background: url(bg.jpg);
+  height: 100vh;
+  background-size: 100% 100%;
 }
 
-.container .navbar{
-    width: 100%;
-    height: 80px;
-    background-color: #405A73;
+.container .navbar {
+  width: 100%;
+  height: 80px;
+  background-color: #405a73;
 }
 
-.navbar ul{
-    float: right;
-    margin-right: 20px;
+.navbar ul {
+  float: right;
+  margin-right: 20px;
 }
 
-.navbar .logo a{
-    text-decoration: none;
-    font-size: 30px;
-    font-family: sans-serif;
-    color: #f3f3f3;
-
+.navbar .logo a {
+  text-decoration: none;
+  font-size: 30px;
+  font-family: sans-serif;
+  color: #f3f3f3;
 }
 
-.navbar .logo{
-    display: inline-block;
-    margin-left: 50px;
-    margin-top: 20px;
+.navbar .logo {
+  display: inline-block;
+  margin-left: 50px;
+  margin-top: 20px;
 }
 
-.navbar ul li{
-    list-style: none;
-    display: inline-block;
-    margin: 0 8px;
-    line-height: 80px;
+.navbar ul li {
+  list-style: none;
+  display: inline-block;
+  margin: 0 8px;
+  line-height: 80px;
 }
 
-.navbar ul li a{
-    color: white;
-    text-decoration: none;
-    font-size: 20px;
-    padding: 6px 10px;
-    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
-    transition: .5s;
+.navbar ul li a {
+  color: white;
+  text-decoration: none;
+  font-size: 20px;
+  padding: 6px 10px;
+  font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande",
+    "Lucida Sans", Arial, sans-serif;
+  transition: 0.5s;
 }
 
 .navbar ul li a.active,
-.navbar ul li a:hover{
-    background-color: #ff6e00;
-    border-radius: 2px;
-
+.navbar ul li a:hover {
+  background-color: #ff6e00;
+  border-radius: 2px;
 }
 
-.container .center{
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%,-50%);
-    font-family: sans-serif;
-    user-select: none;
-
+.container .center {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  font-family: sans-serif;
+  user-select: none;
 }
 
-.center h1{
-    color: black;
-    font-size: 70px;
-    font-weight: bold;
-    width: 900px;
-    text-align: center;
+.center h1 {
+  color: black;
+  font-size: 70px;
+  font-weight: bold;
+  width: 900px;
+  text-align: center;
 }
 
-.center h2{
-    color: #fff;
-    font-size: 50px;
-    font-weight: bold;
-    width: 885px;
-    margin-top: 10px;
-    text-align: center;
+.center h2 {
+  color: #fff;
+  font-size: 50px;
+  font-weight: bold;
+  width: 885px;
+  margin-top: 10px;
+  text-align: center;
 }
 
-.center .buttons{
-    margin: 35px 280px;
+.center .buttons {
+  margin: 35px 280px;
 }
 
-.buttons button{
-    height: 50px;
-    width: 150px;
-    font-size: 18px;
-    font-weight: bold;
-    color: #ffb3b3;
-    background: rgb(207, 96, 88);
-    border: solid 1px red;
-    cursor: pointer;
-    outline: none;
-    border-radius: 25px;
-    transition: .5s; 
+.buttons button {
+  height: 50px;
+  width: 150px;
+  font-size: 18px;
+  font-weight: bold;
+  color: #ffb3b3;
+  background: rgb(207, 96, 88);
+  border: solid 1px red;
+  cursor: pointer;
+  outline: none;
+  border-radius: 25px;
+  transition: 0.5s;
 }
 
-.buttons button:hover{
-    background: #fff;
+.buttons button:hover {
+  background: #fff;
 }
